--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GreenWave Online Store Presentation</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -14,7 +14,7 @@
     <h2>Online Dropshipping Business</h2>
     <p>Mission: To provide eco-friendly products that help people live sustainably.</p>
     <p>Vision: To become a leading online retailer of eco-conscious products worldwide.</p>
-    <img src="20251118_111039.jpg" alt="Eco-Friendly Products">
+    <img src=".jpg" alt="Eco-Friendly Products">
   </div>
 
   <!-- Slide 2 -->
